--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.955.0",
     "@neondatabase/serverless": "^1.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
@@ -34,6 +35,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "node-mailjet": "^6.0.11",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -52,6 +55,7 @@
     "@prisma/client": "^7.1.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.2",
