--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "flutterwave-node-v3": "^1.3.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "node-mailjet": "^6.0.11",
