--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "@prisma/client": "^7.1.0",
+    "dotenv": "^16.0.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
