--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-local": "^1.0.0",
     "@prisma/client": "^7.1.0",
     "dotenv": "^16.0.0",
+    "express": "^4.21.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
